* Statische Codeanalyse durchgeführt und verbessert.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@9 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/canprog/Makefile
+++ b/canprog/Makefile
@@ -40,6 +40,9 @@ config:	config.o can_pc.o mrw_dump.o
 
 setid:	setid.o can_pc.o mrw_dump.o
 
+test:
+	splint $(CPPFLAGS) $(SRC)
+
 clean:
 	rm -rf *.o $(PROGS) .dep
 
