--- a/Stellwerk/build.xml
+++ b/Stellwerk/build.xml
@@ -96,7 +96,8 @@
 		<mkdir dir="${gen-path}"/>
 		<copy file="${src-path}/log4j.properties" todir="${bin-path}" />
 		
-		<javac destdir="${bin-path}" verbose="${javacVerbose}" debug="${javacDebugInfo}">
+		<javac destdir="${bin-path}" verbose="${javacVerbose}"
+				encoding="ISO-8859-15" debug="${javacDebugInfo}">
 			<classpath refid="compile.classpath"/>
             <src path="${src-path}" />
             <src path="${gen-path}" />
