* Hardware-mäßige Pulsweitenmodulation (PWM) ist vollkommen überbewertet ;-)
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@32 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/mc/Makefile
+++ b/mc/Makefile
@@ -7,7 +7,7 @@ SRC	= bootloader.c firmware.c gateway.c test.c\
 	CAN_NodeActivity.c\
 	bit.c rail.c signal.c switch.c\
 	mcp2515.c spi.c eeprom.c uart.c serial.c timer.c sleep.c can_ring.c cmd_queue.c result_queue.c config.c\
-	can_processing_new.c can_processing_old.c
+	can_processing_new.c pwm.c
 
 OBJCOPY=avr-objcopy
 OBJDUMP=avr-objdump
@@ -15,23 +15,8 @@ AVRDUDE=avrdude
 
 all:	firmware.hex bootloader.hex gateway.hex test.hex firmware.lst bootloader.lst gateway.lst
 
-old:	firmware_old.hex firmware_old.lst
-
 revision.h:	.
 	./revision.sh
-
-#######################
-# Firmware for CAN node
-#######################
-
-firmware_old.out:	firmware.o bit.o mcp2515.o rail.o signal.o spi.o switch.o eeprom.o serial.o timer.o sleep.o can_ring.o cmd_queue.o result_queue.o config.o can_processing_old.o
-	$(LINK.c) -Wl,-Map,firmware_old.map -o $@ $^
-
-firmware_old.hex:	firmware_old.out
-	$(OBJCOPY) -R .eeprom -O ihex $^ $@
-
-firmware_old.lst:	firmware_old.out
-	$(OBJDUMP) -h -S -j .text -j .data $^ >$@
 
 ###########################
 # New firmware for CAN node
@@ -82,6 +67,19 @@ bootloader.lst:	bootloader.out
 bootloader.hex:	bootloader.out
 	$(OBJCOPY) -R .eeprom -O ihex $^ $@
 
+#########################
+# Firmware for light test
+#########################
+
+light.out:	light.o sleep.o pwm.o timer.o bit.o
+	$(LINK.c) -Wl,-Map,light.map -o $@ $^
+
+light.hex:	light.out
+	$(OBJCOPY) -R .eeprom -O ihex $^ $@
+
+light.lst:	light.out
+	$(OBJDUMP) -h -S -j .text -j .data $^ >$@
+
 ######################
 # AVR promming targets
 ######################
@@ -94,6 +92,9 @@ install_bootloader:	bootloader.hex
 
 install_bootloader_jtag:	bootloader.hex
 	$(AVRDUDE) -p m32 -e -B 4 -U flash:w:$^ -U hfuse:w:0x0:m -U lfuse:w:0x20:m -U lock:w:0x2f:m
+
+install_light:	light.hex
+	$(AVRDUDE) -p m32 -e -B 1 -U flash:w:$^ -U hfuse:w:0x09:m -U lfuse:w:0x1e:m
 
 verify_firmware:	firmware.hex
 	$(AVRDUDE) -p m32 -B 4 -U flash:v:$^
