* Acht unterschiedliche Profile, wie Neonröhren angehen könnten...
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@38 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/mc/Makefile
+++ b/mc/Makefile
@@ -71,7 +71,7 @@ bootloader.hex:	bootloader.out
 # Firmware for light test
 #########################
 
-light.out:	light.o sleep.o pwm.o timer.o
+light.out:	light.o sleep.o pwm.o timer.o mcp2515.o spi.o
 	$(LINK.c) -Wl,-Map,light.map -o $@ $^
 
 light.hex:	light.out
