* Neue Modellelemente hinzugefügt:    o Beleuchtungsmodul    o Lampe  * Tippfehler beseitigt.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@39 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/Modelleditor/plugin.properties
+++ b/Modelleditor/plugin.properties
@@ -31,7 +31,7 @@ _UI_Signal_type = Signal
 _UI_Bauelement_type = Bauelement
 _UI_Element_type = Element
 _UI_Gleisabschnitt_type = Gleisabschnitt
-_UI_Unit_type = Unit
+_UI_Unit_type = Gerät
 _UI_Gruppe_type = Gruppe
 _UI_Modell_type = Modell
 _UI_Controller_type = Controller
@@ -56,28 +56,28 @@ _UI_Gleissperrsignal_type = Gleissperrsignal
 _UI_Formhauptsignal_type = Formhauptsignal
 _UI_Formgleissperrsignal_type = Formgleissperrsignal
 _UI_Strecke_type = Strecke
-_UI_Unknown_type = Object
-_UI_Unknown_datatype= Value
-_UI_Anschluss_number_feature = Number
+_UI_Unknown_type = Objekt
+_UI_Unknown_datatype= Wert
+_UI_Anschluss_number_feature = Nummer
 _UI_Anschluss_lichtsignal_feature = Lichtsignal
 _UI_Anschluss_controller_feature = Controller
 _UI_Lichtsignal_anschluss_feature = Anschluss
-_UI_Signal_inZaehlrichtung_feature = In Zaehlrichtung
+_UI_Signal_inZaehlrichtung_feature = In Zählrichtung
 _UI_Bauelement_abschnitt_feature = Abschnitt
 _UI_Element_name_feature = Name
 _UI_Gleisabschnitt_gruppe_feature = Gruppe
 _UI_Gleisabschnitt_modul_feature = Modul
 _UI_Gleisabschnitt_bauelement_feature = Bauelement
-_UI_Unit_unit_no_feature = Unit no
+_UI_Unit_unit_no_feature = Gerätenummer
 _UI_Gruppe_modell_feature = Modell
 _UI_Gruppe_abschnitt_feature = Abschnitt
 _UI_Modell_controller_feature = Controller
 _UI_Modell_gruppe_feature = Gruppe
 _UI_Controller_id_feature = Id
 _UI_Controller_anschluss_feature = Anschluss
-_UI_Controller_modules_feature = Modules
+_UI_Controller_modules_feature = Module
 _UI_Controller_modell_feature = Modell
-_UI_Modul_number_feature = Number
+_UI_Modul_number_feature = Nummer
 _UI_Modul_controller_feature = Controller
 _UI_Gleismodul_abschnitte_feature = Abschnitte
 _UI_Verzweigung_neu_feature = Neu
@@ -85,11 +85,11 @@ _UI_Magnetartikel_spulen_feature = Spulen
 _UI_Magnetartikel_modul_feature = Modul
 _UI_Impulsmodul_magnetartikel_feature = Magnetartikel
 _UI_Gleisteil_teile_feature = Teile
-_UI_Gleisteil_aInZaehlrichtung_feature = AIn Zaehlrichtung
-_UI_Weiche_cIstAbzweig_feature = CIst Abzweig
-_UI_Weiche_bIstAbzweig_feature = BIst Abzweig
-_UI_Weiche_bIstBevorzugt_feature = BIst Bevorzugt
-_UI_Weiche_cIstBevorzugt_feature = CIst Bevorzugt
+_UI_Gleisteil_aInZaehlrichtung_feature = A in Zählrichtung
+_UI_Weiche_cIstAbzweig_feature = C ist Abzweig
+_UI_Weiche_bIstAbzweig_feature = B ist Abzweig
+_UI_Weiche_bIstBevorzugt_feature = B ist bevorzugt
+_UI_Weiche_cIstBevorzugt_feature = C ist bevorzugt
 _UI_Weiche_b_feature = B
 _UI_Weiche_c_feature = C
 _UI_Weiche_a_feature = A
@@ -97,43 +97,49 @@ _UI_Gleis_istAbzweig_feature = Ist Abzweig
 _UI_Gleis_istHauptgleis_feature = Ist Hauptgleis
 _UI_Gleis_a_feature = A
 _UI_Gleis_b_feature = B
-_UI_DKW_adIstAbzweig_feature = Ad Ist Abzweig
-_UI_DKW_bcIstAbzweig_feature = Bc Ist Abzweig
+_UI_DKW_adIstAbzweig_feature = AD ist Abzweig
+_UI_DKW_bcIstAbzweig_feature = BC ist Abzweig
 _UI_DKW_a_feature = A
 _UI_DKW_c_feature = C
 _UI_DKW_b_feature = B
 _UI_DKW_d_feature = D
-_UI_Unknown_feature = Unspecified
+_UI_Unknown_feature = Unspezifiziert
 _UI_ModelrailwayEditor_menu = &Modelleisenbahn Editor
 _UI_CreateChild_menu_item = &New Child
 _UI_CreateSibling_menu_item = N&ew Sibling
-_UI_ShowPropertiesView_menu_item = Show &Properties View
+_UI_ShowPropertiesView_menu_item = Eigenschaften anzeigen
 _UI_RefreshViewer_menu_item = &Refresh
-_UI_SelectionPage_label = Selection
+_UI_SelectionPage_label = Auswahl
 _UI_ParentPage_label = Parent
-_UI_ListPage_label = List
-_UI_TreePage_label = Tree
-_UI_TablePage_label = Table
-_UI_TreeWithColumnsPage_label = Tree with Columns
-_UI_ObjectColumn_label = Object
+_UI_ListPage_label = Liste
+_UI_TreePage_label = Baum
+_UI_TablePage_label = Tabelle
+_UI_TreeWithColumnsPage_label = Baum mit Spalten
+_UI_ObjectColumn_label = Objekt
 _UI_SelfColumn_label = Self
-_UI_NoObjectSelected = Selected Nothing
-_UI_SingleObjectSelected = Selected Object: {0}
+_UI_NoObjectSelected = Nichts ausgewählt
+_UI_SingleObjectSelected = Ausgewählte Objekte: {0}
 _UI_MultiObjectSelected = Selected {0} Objects
-_UI_OpenEditorError_label = Open Editor
+_UI_OpenEditorError_label = Editor öffnen
 _UI_Wizard_category = Modelleisenbahn
-_UI_CreateModelError_message = Problems encountered in file "{0}"
+_UI_CreateModelError_message = Probleme in Datei "{0}" aufgetreten
 _UI_ModelrailwayModelWizard_label = Modelleisenbahn
 _UI_ModelrailwayModelWizard_description = Editiere eine neue Modelleisenbahn
 _UI_ModelrailwayEditor_label = Modelleisenbahn Editor
 _UI_ModelrailwayEditorFilenameDefaultBase = Anlage
 _UI_ModelrailwayEditorFilenameExtensions = modelrailway
-_UI_Wizard_label = New
-_WARN_FilenameExtension = The file name must end in ''.{0}''
-_WARN_FilenameExtensions = The file name must have one of the following extensions: {0}
-_UI_ModelObject = &Model Object
+_UI_Wizard_label = Neu
+_WARN_FilenameExtension = Der Dateiname muss mit ''.{0}'' enden!
+_WARN_FilenameExtensions = Die Datei muss einer dieser Endungen haben: {0}
+_UI_ModelObject = &Modellobjekt
 _UI_XMLEncoding = &XML Encoding
 _UI_XMLEncodingChoices = UTF-8 ASCII UTF-16 UTF-16BE UTF-16LE ISO-8859-1
-_UI_Wizard_initial_object_description = Select a model object to create
-_UI_FileConflict_label = File Conflict
+_UI_Wizard_initial_object_description = Wähle ein Modellobjekt für das Erstellen 
+_UI_FileConflict_label = Dateikonflikt
 _WARN_FileConflict = There are unsaved changes that conflict with changes made outside the editor.  Do you wish to discard this editor's changes?
+_UI_Beleuchtungsmodul_type = Beleuchtungsmodul
+_UI_Lampe_type = Lampe
+_UI_Beleuchtungsmodul_lampe_feature = Lampe
+_UI_Lampe_schwellwert_feature = Schwellwert
+_UI_Lampe_typ_feature = Typ
+_UI_Lampe_modul_feature = Modul
