--- a/Modelleditor/build.properties
+++ b/Modelleditor/build.properties
@@ -13,7 +13,10 @@ bin.includes = .,\
                about.properties,\
                about.ini,\
                about.html,\
-               mrw32.gif
+               mrw32.gif,\
+               model/Modelrailway.genmodel,\
+               model/Modelrailway.ecore
 jars.compile.order = .
-source.. = src/
+source.. = src/,\
+           model/
 output.. = bin/
