--- a/Steuerung/build.properties
+++ b/Steuerung/build.properties
@@ -1,5 +1,6 @@
 bin.includes = lib/RXTXcomm.jar,\
                META-INF/,\
                lib/commons-logging-1.0.4.jar,\
-               lib/log4j-1.2.14.jar
+               lib/log4j-1.2.14.jar,\
+               .
 source.. = src/main/java/
