* Metamodell korrigiert und Generator entsprechend angepasst.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@60 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/Modelleditor/plugin.properties
+++ b/Modelleditor/plugin.properties
@@ -143,3 +143,9 @@ _UI_Beleuchtungsmodul_lampe_feature = Lampe
 _UI_Lampe_schwellwert_feature = Schwellwert
 _UI_Lampe_typ_feature = Typ
 _UI_Lampe_modul_feature = Modul
+_UI_Anschluss_nummer_feature = Nummer
+_UI_Anschluss_lichtsignale_feature = Lichtsignale
+_UI_Controller_anschluesse_feature = Anschluesse
+_UI_Controller_module_feature = Module
+_UI_Modul_nummer_feature = Nummer
+_UI_Beleuchtungsmodul_lampen_feature = Lampen
