--- a/mc/Makefile
+++ b/mc/Makefile
@@ -7,7 +7,7 @@ SRC	= bootloader.c firmware.c gateway.c test.c\
 	CAN_NodeActivity.c\
 	bit.c rail.c signal.c switch.c\
 	mcp2515.c spi.c eeprom.c uart.c serial.c timer.c sleep.c can_ring.c cmd_queue.c result_queue.c config.c\
-	can_processing_new.c pwm.c test_light.c light_profile.c light.c
+	can_processing_new.c pwm.c test_light.c light_profile.c light.c random.c
 
 OBJCOPY=avr-objcopy
 OBJDUMP=avr-objdump
@@ -22,7 +22,10 @@ revision.h:	.
 # New firmware for CAN node
 ###########################
 
-firmware.out:	firmware.o bit.o mcp2515.o rail.o signal.o spi.o switch.o eeprom.o serial.o timer.o sleep.o can_ring.o cmd_queue.o result_queue.o config.o can_processing_new.o CAN_Node.o CAN_NodeActivity.o light.o light_profile.o pwm.o
+firmware.out:	firmware.o bit.o mcp2515.o rail.o signal.o spi.o switch.o eeprom.o\
+	serial.o timer.o sleep.o can_ring.o cmd_queue.o result_queue.o config.o\
+	can_processing_new.o CAN_Node.o CAN_NodeActivity.o light.o light_profile.o\
+	pwm.o random.o
 	$(LINK.c) -Wl,-Map,firmware.map -o $@ $^
 
 firmware.hex:	firmware.out
