--- a/canprog/Makefile
+++ b/canprog/Makefile
@@ -2,9 +2,9 @@ CC		= gcc
 CPP		= gcc
 SRC		= canprog.c gwsim.c can_pc.c mrw_dump.c receive.c ping.c send.c\
 	qryerr.c qrybuf.c reset.c switch.c signal.c form.c config.c setid.c\
-	rail.c occupation.c light.c
+	rail.c occupation.c light.c busy.c
 PROGS		= canprog gwsim receive ping send reset switch signal form config qrybuf\
-	qryerr setid rail occupation light
+	qryerr setid rail occupation light busy
 LDFLAGS		= -lm
 CPPFLAGS	= -I ../mc
 
@@ -41,6 +41,8 @@ form:	form.o can_pc.o mrw_dump.o
 config:	config.o can_pc.o mrw_dump.o
 
 setid:	setid.o can_pc.o mrw_dump.o
+
+busy:	busy.o can_pc.o mrw_dump.o
 
 test:
 	splint $(CPPFLAGS) $(SRC)
