* Statistik für Lampen im Generator ergänzt.  * Schwellwert der Lampen bei Anlage 2 abgesenkt.  * Hysterese bei Lampenschaltung eingebaut.  * Erste Sensorwerte kommen fünf Sekunden nach Booten.  * Refactoring der Firmware.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@77 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/mc/Makefile
+++ b/mc/Makefile
@@ -74,7 +74,7 @@ bootloader.hex:	bootloader.out
 # Firmware for light test
 #########################
 
-test_light.out:	test_light.o sleep.o timer.o mcp2515.o spi.o bit.o config.o pwm.o light_profile.o light.o
+test_light.out:	test_light.o sleep.o timer.o mcp2515.o spi.o bit.o config.o pwm.o light_profile.o light.o random.o
 	$(LINK.c) -Wl,-Map,test_light.map -o $@ $^
 
 test_light.hex:	test_light.out
