--- a/Stellwerk/.classpath
+++ b/Stellwerk/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.0.4.jar" sourcepath="Stellwerksrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.14.jar" sourcepath="Stellwerksrc.zip"/>
 	<classpathentry kind="lib" path="lib/model.jar" sourcepath="/AnlageZwei/src/main/java"/>
-	<classpathentry exported="true" kind="lib" path="lib/de.morknet.mrw.control.jar" sourcepath="Stellwerksrc.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/de.morknet.mrw.control.jar" sourcepath="lib/de.morknet.mrw.control.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/RXTXcomm.jar" sourcepath="Stellwerksrc.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
