* Neue Beleuchtungsmöglichkeiten eingeführt.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@106 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/Modelleditor/plugin.properties
+++ b/Modelleditor/plugin.properties
@@ -149,3 +149,13 @@ _UI_Controller_anschluesse_feature = Anschluesse
 _UI_Controller_module_feature = Module
 _UI_Modul_nummer_feature = Nummer
 _UI_Beleuchtungsmodul_lampen_feature = Lampen
+_UI_Beleuchtungsmittel_type = Beleuchtungsmittel
+_UI_Beleuchtungsmittel_schwellwert_feature = Schwellwert
+_UI_Licht_type = Licht
+_UI_Anschluss_anschluss_feature = Anschluss
+_UI_Anschluss_lichter_feature = Lichter
+_UI_Licht_lichter_feature = Lichter
+_UI_Licht_anschluss_feature = Anschluss
+_UI_Anschlusseinheit_type = Anschlusseinheit
+_UI_Anschlusseinheit_anschluss_feature = Anschluss
+_UI_Anschluss_dst_feature = Dst
