* Daemon auf C++ umgestellt.  * Das read()-Handling bei RS232 auf Blocking umgestellt.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@114 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/canprog/Makefile
+++ b/canprog/Makefile
@@ -2,7 +2,7 @@ CC		= gcc
 CPP		= gcc
 SRC		= canprog.c gwsim.c can_pc.c mrw_dump.c receive.c ping.c send.c\
 	qryerr.c qrybuf.c reset.c switch.c signal.c form.c config.c setid.c\
-	rail.c occupation.c light.c busy.c mrw_daemon.c
+	rail.c occupation.c light.c busy.c mrw_daemon.cc
 PROGS		= canprog gwsim receive ping send reset switch signal form config qrybuf\
 	qryerr setid rail occupation light busy mrw_daemon
 
@@ -46,6 +46,7 @@ setid:	setid.o can_pc.o mrw_dump.o
 busy:	busy.o can_pc.o mrw_dump.o
 
 mrw_daemon:	mrw_daemon.o mrw_dump.o can_pc.o
+	$(LINK.cc) -o $@ $^ 
 
 test:
 	splint $(CPPFLAGS) $(SRC)
