* Refactoring.  * Mehr Generator-Logging.  * Weniger Geräte an Controller 11 angeschlossen.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@115 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/mc/Makefile
+++ b/mc/Makefile
@@ -7,7 +7,7 @@ SRC	= bootloader.c firmware.c gateway.c test.c\
 	CAN_NodeActivity.c\
 	bit.c rail.c signal.c switch.c\
 	mcp2515.c spi.c eeprom.c uart.c serial.c timer.c sleep.c can_ring.c cmd_queue.c result_queue.c config.c\
-	can_processing_new.c pwm.c test_light.c light_profile.c light.c random.c
+	can_processing.c pwm.c test_light.c light_profile.c light.c random.c
 
 OBJCOPY=avr-objcopy
 OBJDUMP=avr-objdump
@@ -24,7 +24,7 @@ revision.h:	.
 
 firmware.out:	firmware.o bit.o mcp2515.o rail.o signal.o spi.o switch.o eeprom.o\
 	serial.o timer.o sleep.o can_ring.o cmd_queue.o result_queue.o config.o\
-	can_processing_new.o CAN_Node.o CAN_NodeActivity.o light.o light_profile.o\
+	can_processing.o CAN_Node.o CAN_NodeActivity.o light.o light_profile.o\
 	pwm.o random.o
 	$(LINK.c) -Wl,-Map,firmware.map -o $@ $^
 
