--- a/mc/Makefile
+++ b/mc/Makefile
@@ -1,6 +1,6 @@
 MCU	= atmega32
 CC	= avr-gcc
-CFLAGS	= -mmcu=$(MCU) -Wall -Wstrict-prototypes -Os -funsigned-bitfields -fpack-struct -mcall-prologues -std=gnu99
+CFLAGS	= -mmcu=$(MCU) -Wall -Wstrict-prototypes -O3 -funsigned-bitfields -fpack-struct -std=gnu99
 LDFLAGS	= -Wl,-Map,usart.map
 SRC	= bootloader.c firmware.c gateway.c test.c\
 	CAN_Node.c\
