* Kleinere RGB-Spielerei...
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@147 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/mc/Makefile
+++ b/mc/Makefile
@@ -87,7 +87,7 @@ test_light.lst:	test_light.out
 # Firmware for RGB test
 #######################
 
-RGB.out:	RGB.o mcp2515.o spi.o eeprom.o config.o sleep.o 
+RGB.out:	RGB.o mcp2515.o spi.o eeprom.o config.o sleep.o light.o pwm.o serial.o random.o bit.o light_profile.o timer.o
 	$(LINK.c) -Wl,-Map,RGB.map -o $@ $^
 
 RGB.hex:	RGB.out
