* Busy-Indicator für RGB-Test hinzugefügt.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@148 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/mc/Makefile
+++ b/mc/Makefile
@@ -113,7 +113,7 @@ install_light:	test_light.hex
 	$(AVRDUDE) -p m32 -e -B 8 -U flash:w:$^
 
 install_rgb:	RGB.hex
-	$(AVRDUDE) -p m32 -e -B 8 -U flash:w:$^ -U hfuse:w:0x1:m -U lfuse:w:0x20:m -U lock:w:0x2f:m
+	$(AVRDUDE) -p m32 -e -B 8 -U flash:w:$^ -U hfuse:w:0xc1:m -U lfuse:w:0x20:m -U lock:w:0x2f:m
 
 verify_firmware:	firmware.hex
 	$(AVRDUDE) -p m32 -B 4 -U flash:v:$^
