* Weitere Tests eingebaut und somit die Abdeckung erhöht.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@170 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/AnlageZwei/build.xml
+++ b/AnlageZwei/build.xml
@@ -284,6 +284,7 @@
 			<filter excludes="de.morknet.mrw.Configuration*"/>
 			<filter excludes="de.morknet.mrw.*test*"/>
 			<filter excludes="de.morknet.mrw.*rs232*"/>
+			<filter excludes="de.morknet.mrw.*tcp*"/>
 			<filter excludes="de.morknet.mrw.*Exception"/>
 			<xml  outfile="coverage.xml" />
 			<txt  outfile="coverage.txt" />
