--- a/AnlageZwei/build.xml
+++ b/AnlageZwei/build.xml
@@ -238,6 +238,7 @@
 				<filter excludes="de.morknet.mrw.Configuration*"/>
 				<filter excludes="de.morknet.mrw.*test*"/>
 				<filter excludes="de.morknet.mrw.*rs232*"/>
+				<filter excludes="de.morknet.mrw.*tcp*"/>
 				<filter excludes="de.morknet.mrw.*Exception"/>
 			</instr>
 		</emma>  
