* oAW-Tools eingebunden.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@175 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/AnlageZwei/build.xml
+++ b/AnlageZwei/build.xml
@@ -69,6 +69,7 @@
 			<include name="**/org.eclipse.xtend*.jar"/>
 			<include name="**/org.eclipse.xpand*.jar"/>
 			<include name="com.ibm.*.jar"/>
+			<include name="de.morknet.oaw.*.jar"/>
 			<include name="**/antlr*.jar"/>
 			<include name="**/*xerces*.jar"/>
 			<exclude name="**/*.source*.jar"/>
