* Build-Dependencies aufgelöst.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@176 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/AnlageYakindu/build.xml
+++ b/AnlageYakindu/build.xml
@@ -141,14 +141,7 @@
 	<!--              Setting up build targets                --> 
 	<!-- ==================================================== -->
 
-	<target name="compile.cartridge">
-		<mkdir dir="../Generator/${bin-path}"/>
-		<javac srcdir="../Generator/${src-path}" destdir="../Generator/${bin-path}">
-			<classpath refid="generate.classpath"/>
-		</javac>
-	</target>
-
-	<target name="generate" depends="compile.cartridge">
+	<target name="generate">
 		<workflow file="AnlageYakindu.mwe" classpathref="generate.classpath" failonerror="true"/>
 	</target>
 
