--- a/Microcontroller/build.xml
+++ b/Microcontroller/build.xml
@@ -36,10 +36,10 @@
 			<include name="**/org.eclipse.xpand*.jar"/>
 			<include name="**/org.eclipse.uml2*.jar"/>
 			<include name="**/org.apache.commons.*.jar"/>
+			<include name="**/*antlr*.jar"/>
+			<include name="**/*xerces*.jar"/>
 			<include name="com.ibm.*.jar"/>
 			<include name="*tools5*.jar"/>
-			<include name="**/antlr*.jar"/>
-			<include name="**/*xerces*.jar"/>
 			<exclude name="**/*.source*.jar"/>
 			<exclude name="**/*.src*.jar"/>
 			<exclude name="**/*.editor*.jar"/>
