--- a/AnlageYakindu/build.xml
+++ b/AnlageYakindu/build.xml
@@ -65,14 +65,14 @@
 			<include name="**/org.eclipse.emf*.jar"/>
 			<include name="**/org.eclipse.xtend*.jar"/>
 			<include name="**/org.eclipse.xpand*.jar"/>
+			<include name="**/*antlr*.jar"/>
 			<include name="com.ibm.*.jar"/>
 			<include name="de.morknet.oaw.*.jar"/>
-			<include name="**/antlr*.jar"/>
-			<include name="**/*xerces*.jar"/>
 			<exclude name="**/*.source*.jar"/>
 			<exclude name="**/*.src*.jar"/>
 			<exclude name="**/*.editor*.jar"/>
 		</fileset>
+		<fileset dir="../Generator/${lib-path}"/>
 		<path refid="plugins"/>
 	</path>
 	
