--- a/AnlageYakindu/build.properties
+++ b/AnlageYakindu/build.properties
@@ -1,2 +1,4 @@
-source.. = src/main/java,src/generated/java,src/main/resources
+source.. = src/main/java,\
+           src/generated/java,\
+           src/main/resources
 bin.includes = META-INF/,\n               .
