--- a/AnlageZwei/build.properties
+++ b/AnlageZwei/build.properties
@@ -1,6 +1,5 @@
 source.. = src/main/java,\
            src/generated/java,\
            src/main/resources,\
-           src/main/test/,\
-           ../Steuerung/src/main/java/
+           src/main/test/,
 bin.includes = META-INF/,\n               .
