* Build files angepasst.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@193 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/AnlageYakindu/build.xml
+++ b/AnlageYakindu/build.xml
@@ -123,7 +123,8 @@
 		<mkdir dir="${bin-path}"/>
 		<copy file="${src-path}/log4j.properties" todir="${bin-path}" />
 		<javac srcdir="${src-path}:${gen-src-path}" destdir="${bin-path}"
-				encoding="ISO-8859-15" debug="true">
+				encoding="ISO-8859-15" debug="true"
+				includeantruntime="false">
 			<classpath refid="compile.classpath"/>
 		</javac>
 	</target>
