--- a/Lichtprofile/build.xml
+++ b/Lichtprofile/build.xml
@@ -35,7 +35,8 @@
 	<target name="compile">
 		<mkdir dir="${bin-path}"/>
 		<javac srcdir="${src-path}" destdir="${bin-path}"
-				encoding="ISO-8859-15" debug="true">
+				encoding="ISO-8859-15" debug="true"
+				includeantruntime="false">
 		</javac>
 	</target>
 
