--- a/Stellwerk/build.xml
+++ b/Stellwerk/build.xml
@@ -97,7 +97,9 @@
 		<copy file="${src-path}/log4j.properties" todir="${bin-path}" />
 		
 		<javac destdir="${bin-path}" verbose="${javacVerbose}"
-				encoding="ISO-8859-15" debug="${javacDebugInfo}">
+				encoding="ISO-8859-15"
+				includeantruntime="false"
+				debug="${javacDebugInfo}">
 			<classpath refid="compile.classpath"/>
             <src path="${src-path}" />
             <src path="${gen-path}" />
