--- a/Steuerung/build.xml
+++ b/Steuerung/build.xml
@@ -60,7 +60,9 @@
 		<mkdir dir="${bin-path}"/>
 		<copy file="${src-path}/log4j.properties" todir="${bin-path}" />
 		<javac srcdir="${src-path}" destdir="${bin-path}"
-				encoding="ISO-8859-15" debug="true">
+				encoding="ISO-8859-15"
+				includeantruntime="false"
+				debug="true">
 			<classpath refid="compile.classpath"/>
 		</javac>
 	</target>
