* Linker-Probleme beseitigt.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@201 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/canprog/Makefile
+++ b/canprog/Makefile
@@ -48,7 +48,7 @@ setid:	setid.o can_pc.o mrw_dump.o
 busy:	busy.o can_pc.o mrw_dump.o
 
 mrw_daemon:	mrw_daemon.o mrw_dump.o can_pc.o
-	$(LINK.cc) -o $@ $^ 
+	$(LINK.cc) -o $@ $^ $(LDFLAGS)
 
 test:
 	splint $(CPPFLAGS) $(SRC)
