* Neue Findbugs Version.  * Eine Warnung entfernt. Die NP_ALWAYS_NULL Warnung auf    System.out ist purer Humbug!
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@202 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/Lichtprofile/build.xml
+++ b/Lichtprofile/build.xml
@@ -18,7 +18,7 @@
 		
 	<path id="findbugs.lib">
 		<fileset dir="${findbugs.home}">
-			<include name="**/*.jar"/>
+			<include name="lib/*.jar"/>
 		</fileset>
 	</path>
 
