--- a/Stellwerk/build.xml
+++ b/Stellwerk/build.xml
@@ -38,7 +38,7 @@
 
 	<path id="findbugs.lib">
 		<fileset dir="${findbugs.home}">
-			<include name="*.jar"/>
+			<include name="lib/*.jar"/>
 		</fileset>
 	</path>
 	
