--- a/Steuerung/build.xml
+++ b/Steuerung/build.xml
@@ -13,7 +13,7 @@
 
 	<path id="findbugs.lib">
 		<fileset dir="${findbugs.home}">
-			<include name="**/*.jar"/>
+			<include name="lib/*.jar"/>
 		</fileset>
 	</path>
 
