--- a/tools/Makefile
+++ b/tools/Makefile
@@ -2,6 +2,7 @@ CC		= gcc
 CPP		= gcc
 SRC		= ubbr.c uart.c mcp_config.c rate.c table.c
 PROGS		= ubbr uart mcp_config rate table
+CFLAGS		= -O3
 LDFLAGS		= -lm
 CPPFLAGS	= -I ../mc
 
